--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
         const SECRET_KEY = "shop123"; // Aapka Password
 
         let defaultItems = [
-            { id: 1, name: "White Chicken",  price: 190, unit: "kg", img: "1000001305.jpg" },
-            { id: 2, name: "Red Chicken", price: 280, unit: "kg", img: "1000001306.png" },
-            { id: 3, name: "Fresh Farm Eggs", price: 8, unit: "Piece", img: "image_generation_content_1.png" }
+            { id: 1, name: "White Chicken", oldprice : 220,  price: 190, unit: "kg", img: "1000001305.jpg" },
+            { id: 2, name: "Red Chicken", oldprice : 320, price: 280, unit: "kg", img: "1000001306.png" },
+            { id: 3, name: "Fresh Farm Eggs", oldprice : 10, price: 8, unit: "Piece", img: "image_generation_content_1.png" }
         ];
 
         let items = JSON.parse(localStorage.getItem('dcs_secure_v1')) || defaultItems;
