--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <footer>
         <p>📍 VARANASI UTTAR PRADESH | 📞 Call: +91 9123547766</p>
-        <p>&copy; 2019 DAILY CHICKEN SHOP | Trusted Quality</p>
+        <p>&copy; 2026 DAILY CHICKEN SHOP | Trusted Quality</p>
     </footer>
 
     <script>
@@ -123,9 +123,9 @@
         const SECRET_KEY = "shop123"; // Aapka Password
 
         let defaultItems = [
-            { id: 1, name: "White Chicken", oldprice : 220,  price: 190, unit: "kg", img: "1000001305.jpg" },
-            { id: 2, name: "Red Chicken", oldprice : 320, price: 280, unit: "kg", img: "1000001306.png" },
-            { id: 3, name: "Fresh Farm Eggs", oldprice : 10, price: 8, unit: "Piece", img: "image_generation_content_1.png" }
+            { id: 1, name: "White Chicken", oldPrice: 220, price: 190, unit: "kg", img: "1000001305.jpg" },
+            { id: 2, name: "Desi Red Rooster", oldPrice: 320, price: 280, unit: "kg", img: "1000001306.png" },
+            { id: 3, name: "Fresh Farm Eggs", oldPrice: 10, price: 8, unit: "Piece", img: "image_generation_content_1.png" }
         ];
 
         let items = JSON.parse(localStorage.getItem('dcs_secure_v1')) || defaultItems;
